%% ERD source: export this to docs/erd.png (e.g. via https://mermaid.live or dbdiagram.io)
erDiagram
    User ||--o{ Post : author
    User ||--o{ Comment : author
    Category ||--o{ Post : category
    Post ||--o{ Comment : post
    Post }o--o{ Tag : tags

    User {
        int id PK
        string email UK
        string first_name
        string last_name
        bool is_active
        bool is_staff
        datetime date_joined
        string avatar
    }

    Category {
        int id PK
        string name UK
        string slug UK
    }

    Tag {
        int id PK
        string name UK
        string slug UK
    }

    Post {
        int id PK
        int author_id FK
        string title
        string slug UK
        text body
        int category_id FK
        string status
        datetime created_at
        datetime updated_at
    }

    Comment {
        int id PK
        int post_id FK
        int author_id FK
        text body
        datetime created_at
    }
